add persistence data with localStorage

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>ToDo - List</title>
 </head>
 <body>
     <div class="todo">
         <div class="todo_title">
-            TODO - LIST
+            TO DO - LIST
         </div>
         <div class="todo_list" id="todoList">
                     
         </div>
-        <div class="todo_new_item">
+        <div class="todo_new_item" id = "todoNewItem">
             <div>&and;</div>
-            <input type="text" id = "newItem" placeholder="Digite e pressione enter para adicionar a tarefa">
+            <input type="text" id = "newItem" placeholder="Insert your task">
             <div>&and;</div>
         </div>
     </div>
