--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>ToDo - List</title>
+    <title>Things To Do</title>
 </head>
 <body>
     <div class="todo">
         <div class="todo_title">
-            TO DO - LIST
+            THINGS TO DO
         </div>
-        <div class="todo_list" id="todoList">
-                    
+        <div class="todo_list" id="todoList">     
         </div>
-        <div class="todo_new_item" id = "todoNewItem">
+        <div class="todo_new_item">
             <div>&and;</div>
-            <input type="text" id = "newItem" placeholder="Insert your task">
+            <input type="text" placeholder="Insert your task">
             <div>&and;</div>
         </div>
     </div>
